[package]
name = "powerline"
version = "0.2.0"
authors = ["growse <github@growse.com>", "cirho <me@cirho.com>"]
edition = "2018"

[dependencies]
users = "0.10"
libc = "0.2"
hostname = "0.3"
git2 = { version = "0.13", optional = true, default-features = false }
chrono = { version = "0.4.19", optional = true }
dirs = "2.0.2"

[dev-dependencies]
criterion = "0.3"

[features]
default = ["bash-shell", "libgit", "cli-options"]
bash-shell = []
bare-shell = []
zsh-shell = []
cli-options = []
libgit = ["git2"]
time = ["chrono"]

[profile.release]
opt-level = 3
lto = true
debug = false

[[bench]]
name = "cli"
harness = false