[package]
name = "powerline"
version = "0.2.1"
authors = ["growse <github@growse.com>", "cirho <me@cirho.com>"]
edition = "2018"

[dependencies]
users = "0.11"
libc = "0.2"
hostname = "0.3"
git2 = { version = "0.13", optional = true, default-features = false }
chrono = { version = "0.4.19", optional = true }
dirs = "3.0.1"

[dev-dependencies]
criterion = "0.3"

[features]
default = ["bash-shell", "libgit", "cli-options", "time"]
bash-shell = []
bare-shell = []
zsh-shell = []
cli-options = []
libgit = ["git2"]
time = ["chrono"]
print-module-timings = []

[profile.release]
opt-level = 3
lto = true
debug = false

[[bench]]
name = "cli"
harness = false